kuber/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: redislabs/redismod
          name: db
          ports:
            - containerPort: 6379
          resources: {}
status: {}
