kuber/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: db
  type: ClusterIP
status:
  loadBalancer: {}
